# nrf9151-at-commands

./: Cargo.toml  memory.x
src/: main.rs
